--- a/infrastructure/openstack/configs/globals.yml.template
+++ b/infrastructure/openstack/configs/globals.yml.template
@@ -1,4 +1,5 @@
+workaround_ansible_issue_8743: "yes"
 kolla_base_distro: "ubuntu"
 network_interface: "{{ MAIN_IFACE }}"
-neutron_external_interface: "veth1"
+neutron_external_interface: "{{ NEUTRON_EXTERNAL_INTERFACE }}"
 kolla_internal_vip_address: "{{ VIP }}"
